* IECoreRI::ParameterList now accepts V2iData, converting it to RenderMan "integer[2]".
* Added Renderer option "editable", along with editBegin() and editEnd() methods, to allow interactive rerendering functionality to be implemented. These are currently only implemented by IECoreRI::Renderer.

Bug Fixes :

* IECoreGL ColorTexture now uses GL_RGB16 as the internal colour format to the glTexImage2D call. This fixes colour banding in subtle gradients and edges with an alpha fade off. GL_RGB16 was chosen as 
  it is supported from OpenGl1.1 and earlier graphics cards that don't support it will reduce their bit precision to GL_RGB8. Please see the following document for more details:
  http://developer.download.nvidia.com/opengl/texture_formats/nv_ogl_texture_formats.pdf
* IECore ImageReader and ImageWriter not doing transformation on alpha anymore, A gets filtered out from the channel names given to ColorSpaceTransformOp.
* IECore ColorSpaceTransformOp applies unpremult before channelOp conversion then premult after, as channelOp doesn't deal with unpremultiplication of the colour channels.
* Removed rounding hack in OversamplesCalculator.
* Maya intField created to display IntParameter now has step size set to 1 ( if min or max are set ).  This prevents a warning when creating fields for parameters with max - min less than the default step of 10.
* Preventing segfaults when CompoundData and CompoundObject have items with NULL pointers.
* Preventing segfaults when Parameter's default values are initialized with NULL pointers (or the Python None object).
* ieFilteredAbs corrected to return positive values, ieTurbulence monochrome variant now filtered

7.10.2 :

Improvements :

* Added setParameterisedValues() for IECoreHoudini SOPs and FnHolders to sync Houdini node values to IECore::Parameterised objects.

Bug Fixes :

* Fixed crashes caused by calling PrimitiveEvaluator.create( None ) in Python, replacing them with ValueError exceptions.