@@ -1009,7 +1009,7 @@ env.Append(
 		"-DIE_CORE_MAJORVERSION=$IECORE_MAJOR_VERSION",
 		"-DIE_CORE_MINORVERSION=$IECORE_MINOR_VERSION",
 		"-DIE_CORE_PATCHVERSION=$IECORE_PATCH_VERSION",
-		"-DBOOST_FILESYSTEM_VERSION=2",
+		"-DBOOST_FILESYSTEM_VERSION=3",
 	]
 )
 
